--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-158.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-5.30MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.07MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-759.9KB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇨🇳 中国-3.88MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-8.15MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-2.86MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-306.8KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇭🇰 香港-4.16MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇺🇸 美国-472.2KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇨🇳 中国-470.3KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.93MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 未知国家-306.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
