--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-8.15MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇬🇧 英国-2.86MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-306.8KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇭🇰 香港-4.16MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇺🇸 美国-472.2KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇨🇳 中国-470.3KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.93MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 81.90.188.59, port: 41657, type: vmess, uuid: 930a425e-2fc8-4930-8735-141f6b237755, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.00MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.96MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇦 加拿大-3.45MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇺🇸 美国-641.2KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇺🇸 美国-4.38MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-5.11MB/s(Youtube:不良林), server: hk.funan.space, port: 443, type: vmess, uuid: 071a2d80-1f59-4ad1-8eaa-50d335e8a0e2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /0567e1d44aa0969/, ws-headers: {Host: hk.funan.space}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-8.15MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
-      - 未知国家-306.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.74MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
