--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: 81.90.188.59, port: 41657, type: vmess, uuid: 930a425e-2fc8-4930-8735-141f6b237755, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.00MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 乌克兰-2.66MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇳 中国-8.89MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-472.2KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
   - {name: 🇺🇸 美国-3.96MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇦 加拿大-3.45MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
   - {name: 🇺🇸 美国-641.2KB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 乌克兰-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-472.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.96MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-641.2KB/s(Youtube:不良林)
